Table members {
  id bigint [pk, increment]
  name varchar [not null]
  email varchar [not null, unique]
  age int [not null]
  isActive boolean [default: true]
}

Table books {
  id bigint [pk, increment]
  name varchar [not null]
  author varchar [not null]
  available_copy int [not null]
  total_copies int [not null]
  isActive boolean [default: true]
}

Table borrow_transactions {
  id bigint [pk, increment]
  member_id bigint [not null]
  borrow_date datetime [not null]
  due_date datetime [not null]
}

Table borrow_records {
  id bigint [pk, increment]
  borrow_transaction_id bigint [not null]
  book_id bigint [not null]
  return_date datetime
  fine bigint
}

Ref: borrow_transactions.member_id > members.id
Ref: borrow_records.borrow_transaction_id > borrow_transactions.id
Ref: borrow_records.book_id > books.id